--- a/src/components/User.css
+++ b/src/components/User.css
@@ -1,13 +1,21 @@
 .user {
   margin-bottom: 5px;
   width: 90%;
+  font-size: 15px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
+.username {
+  overflow: hidden;
+  max-width: 90%;
+}
+
 .offline {
   margin-top: 2px;
+  position: relative;
+  z-index: 1;
   height: 7px;
   width: 7px;
   background-color: #555;
@@ -16,6 +24,8 @@
 
 .online {
   margin-top: 2px;
+  position: relative;
+  z-index: 1;
   height: 7px;
   width: 7px;
   background-color: #1ec51e;
