--- a/src/components/Users.css
+++ b/src/components/Users.css
@@ -1,7 +1,7 @@
 .users {
   margin-right: 15px;
   grid-area: users;
-  overflow-y: hidden;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
